Fixing svae&restore UI issues